--- a/.project
+++ b/.project
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-<<<<<<< HEAD
-	<name>DeepBet</name>
-=======
-	<name>DeepBet-King</name>
->>>>>>> 54594044e91a797a0455d03161ba213baee8bdf3
+	<name>Project_deepBet</name>
 	<comment></comment>
 	<projects>
 	</projects>
