--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="Ext_jar/java-json.jar"/>
 	<classpathentry kind="lib" path="Ext_jar/httpcomponents-client-4.5.5/lib/commons-codec-1.10.jar"/>
 	<classpathentry kind="lib" path="Ext_jar/httpcomponents-client-4.5.5/lib/commons-logging-1.2.jar"/>
@@ -24,5 +28,31 @@
 	<classpathentry kind="lib" path="Ext_jar/httpcomponents-asyncclient-4.1.3/lib/httpclient-cache-4.5.3.jar"/>
 	<classpathentry kind="lib" path="Ext_jar/httpcomponents-asyncclient-4.1.3/lib/httpcore-4.4.6.jar"/>
 	<classpathentry kind="lib" path="Ext_jar/httpcomponents-asyncclient-4.1.3/lib/httpcore-nio-4.4.6.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/neuroph-adapters-2.94-javadoc.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/neuroph-adapters-2.94-sources.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/neuroph-adapters-2.94.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/neuroph-contrib-2.94-javadoc.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/neuroph-contrib-2.94-sources.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/neuroph-contrib-2.94.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/neuroph-core-2.94-javadoc.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/neuroph-core-2.94-sources.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/neuroph-core-2.94.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/neuroph-imgrec-2.94-javadoc.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/neuroph-imgrec-2.94-sources.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/neuroph-imgrec-2.94.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/neuroph-ocr-2.94-javadoc.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/neuroph-ocr-2.94-sources.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/neuroph-ocr-2.94.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/neuroph-samples-2.94-javadoc.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/neuroph-samples-2.94-sources.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/neuroph-samples-2.94.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/libs/ajt-2.9.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/libs/android-1.5_r4.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/libs/javaml-0.1.7.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/libs/logback-classic-1.0.13.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/libs/logback-core-1.1.2.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/libs/slf4j-api-1.7.5.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/libs/slf4j-nop-1.7.6.jar"/>
+	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/libs/weka.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
