NUUUUURÅ, Progressbar försök 10

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 test
 src/boundary/ConnectDatabase.java
 src/boundary/FetchApi.java
+SavedFiles/Autosave/auto.txt
+Fixed
+src/boundary/FetchApi.java
