--- a/.classpath
+++ b/.classpath
@@ -55,5 +55,6 @@
 	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/libs/slf4j-nop-1.7.6.jar"/>
 	<classpathentry kind="lib" path="Ext_jar/neuroph-2.94/libs/weka.jar"/>
 	<classpathentry kind="lib" path="Ext_jar/gson-2.6.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
